syntax = "proto3";
package Login;

// 连接管理消息 1 - 1
message ConnectRequest 
{
    string player_name = 1;
    bool is_connect = 2;
}

//1 - 2
message ConnectResponse
{
    bool success = 1;
    int32 client_id =2;
    string message = 3;
}

// 心跳 1 - 3
message Heartbeat {
    string str = 1;
}